abstract class IMemory {
  void applyCommand(String command);
  String get value;
}
